unpackaged/main/default/objects/Distribution_Routing_Definition__c/Distribution_Routing_Definition__c.object-meta.xml
<CustomObject>
    <label>Distribution Routing Definition</label>
    <nameField>
        <label>Distribution Routing Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distribution Routing Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>