unpackaged/main/default/objects/Distribution_Routing_Definition__c/fields/AGS_Minimum__c.field-meta.xml
<CustomField>
    <fullName>AGS_Minimum__c</fullName>
    <description>Minimum Annual Revenue for Skill</description>
    <label>AGS Minimum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>