unpackaged/main/default/objects/Distribution_Routing_Definition__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description>Introduced as part of the Salesforce merge project to differentiate National Funding vs Quick Bridge routing definitions</description>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>National Funding</fullName>
            </value>
            <value>
                <fullName>Quick Bridge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>