unpackaged/main/default/objects/Distribution_Routing_Definition__c/fields/Channel_Name__c.field-meta.xml
<CustomField>
    <fullName>Channel_Name__c</fullName>
    <description>This field is used to display the marketing campaign name used by the custom DLP texts in the Notification - Custom Email and Text Notifications flow</description>
    <label>Channel Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>