unpackaged/main/default/objects/Distribution_Routing_Definition__c/fields/Count_Method__c.field-meta.xml
<CustomField>
    <fullName>Count_Method__c</fullName>
    <inlineHelpText>Total: Count against all distribution
Skill: Count against within this distribution routing
Channel: Count against all channels with the same campaign type</inlineHelpText>
    <label>Count Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Total</fullName>
            </value>
            <value>
                <fullName>Channel</fullName>
            </value>
            <value>
                <fullName>Skill</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>