unpackaged/main/default/objects/Distribution_Routing_Definition__c/fields/Custom_Email_and_Text__c.field-meta.xml
<CustomField>
    <fullName>Custom_Email_and_Text__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates if customized emails and texts should be send to the customer. Used in the Record Distribution Process flow.</description>
    <inlineHelpText>Select only if a custom partner email/text should go out.</inlineHelpText>
    <label>Custom Email and Text</label>
    <type>Checkbox</type>
</CustomField>