unpackaged/main/default/objects/Distribution_Routing_Definition__c/fields/Distribution_Sort_Method__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Sort_Method__c</fullName>
    <description>sorting method of the distribution skills PD-550</description>
    <inlineHelpText>Alphanumeric - Sorted Alphabetically (updated daily)
Random - Sorted in a random order (updated daily)
Round Robin - Not sorted, distribution will occur base on channel specific assignment order
Manual - Manually determined</inlineHelpText>
    <label>Distribution Sort Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alphabetic</fullName>
            </value>
            <value>
                <fullName>Random</fullName>
            </value>
            <value>
                <fullName>Round Robin</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>