unpackaged/main/default/objects/Distribution_Routing_Definition__c/fields/Distribution_Tier__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Tier__c</fullName>
    <label>Distribution Tier</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
            <value>
                <fullName>Tier 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>