unpackaged/main/default/objects/Distribution_Routing_Definition__c/fields/Distribution_Time_Frame__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Time_Frame__c</fullName>
    <description>number of days to look back when calculation number of records assigned to each rep SD5943</description>
    <inlineHelpText>number of days to look back when calculation number of records assigned to each rep</inlineHelpText>
    <label>Distribution Time Frame</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>