unpackaged/main/default/objects/Distribution_Routing_Definition__c/fields/Exclude_From_Total_Count__c.field-meta.xml
<CustomField>
    <fullName>Exclude_From_Total_Count__c</fullName>
    <defaultValue>false</defaultValue>
    <description>check to exclude records assigned through this routing definition from total count PD-553</description>
    <inlineHelpText>check to exclude records assigned through this routing definition from total count</inlineHelpText>
    <label>Exclude From Total Count</label>
    <type>Checkbox</type>
</CustomField>