unpackaged/main/default/objects/Distribution_Routing_Definition__c/fields/Exclude_from_User_s_Assignment_Cap__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_User_s_Assignment_Cap__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if the Record Assignments from this Routing Definition should not be counted towards the users daily cap during record distribution</description>
    <inlineHelpText>Check if the Record Assignments from this Routing Definition should not be counted towards the users daily cap during record distribution. Change will apply retroactively for the day when the field is updated.</inlineHelpText>
    <label>Exclude from User's Assignment Cap</label>
    <type>Checkbox</type>
</CustomField>