unpackaged/main/default/objects/Distribution_Routing_Definition__c/fields/Marketing_Channel__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Channel__c</fullName>
    <label>Marketing Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Marketing_Channel</valueSetName>
    </valueSet>
</CustomField>