unpackaged/main/default/objects/Distribution_Routing_Definition__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>The object api name of the record to distribute. E.g. Opportunity, Lead, Account.</description>
    <label>Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>