unpackaged/main/default/objects/Distribution_Routing_Definition__c/fields/Queue_Override_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Queue_Override_API_Name__c</fullName>
    <description>Allows the routing definition to route records to the defined Queue rather than the users configured in Distribution Skills</description>
    <inlineHelpText>Populate with a Queue API Name if you want to override the distribution skills and route records to queue ownership if this routing definition is matched</inlineHelpText>
    <label>Queue Override API Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>