unpackaged/main/default/objects/Distribution_Routing_Definition__c/fields/Require_Bank_Statements__c.field-meta.xml
<CustomField>
    <fullName>Require_Bank_Statements__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Requires bank statements to be attached to the record before this routing definition can be matched</description>
    <label>Require Bank Statements</label>
    <type>Checkbox</type>
</CustomField>