unpackaged/main/default/objects/Distribution_Routing_Definition__c/fields/Round_Robin_Assignment_Counter__c.field-meta.xml
<CustomField>
    <fullName>Round_Robin_Assignment_Counter__c</fullName>
    <defaultValue>1</defaultValue>
    <description>current assignment order in the Round Robin (PD-1111)
only applicable when Sort Order = Round Robin</description>
    <inlineHelpText>current assignment order in the Round Robin
only applicable when Sort Order = Round Robin</inlineHelpText>
    <label>Round Robin Assignment Counter</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>