unpackaged/main/default/objects/Distribution_Routing_Definition__c/fields/Tier_Picklist_Formula__c.field-meta.xml
<CustomField>
    <fullName>Tier_Picklist_Formula__c</fullName>
    <description>Transforms multi-select picklist values to string for use in flow</description>
    <formula>IF(INCLUDES( Distribution_Tier__c , "Tier 1"), "Tier 1;", NULL) + 
IF(INCLUDES( Distribution_Tier__c , "Tier 2"), "Tier 2;", NULL) + 
IF(INCLUDES( Distribution_Tier__c , "Tier 3"), "Tier 3;", NULL) +
IF(INCLUDES( Distribution_Tier__c , "Tier 4"), "Tier 4;", NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tier Picklist Formula</label>
    <type>Text</type>
</CustomField>