unpackaged/main/default/objects/Distribution_Routing_Definition__c/fields/Trigger_Sort_Order_Update__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Sort_Order_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in Distribution Routing Definition schedule flow to trigger sort order update (PD-550)</description>
    <label>Trigger Sort Order Update</label>
    <type>Checkbox</type>
</CustomField>